--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -14,3 +14,4 @@
 @import '../components/product/scss/product-section.scss';
 @import '../components/product/scss/product-detail-row.scss';
 @import '../components/catalog/catalog.scss';
+@import '../components/basket/basket-table.scss';
