--- a/src/components/catalog/scss/catalog-modal.scss
+++ b/src/components/catalog/scss/catalog-modal.scss
@@ -1,17 +1,51 @@
-// .modal-content{
-//     background-color: var(--modal-bg-color)
-// }
-
-.catalog-modal{
-    .modal-body{
-        padding: 0;
+.catalog-modal-backdrop {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: var(--black-7);
+    top: 0;
+    left: 0;
+    z-index: 99999999;
+    animation: show-modal-backdrop 0.5s ease forwards;
+}
+@keyframes show-modal-backdrop{
+    0%{
+        opacity: 0;
     }
+    100%{
+        opacity: 1;
+    }
+}
+@keyframes show-modal{
+    0%{
+        opacity: 0;
+        top: 55%;
+    }
+    100%{
+        opacity: 1;
+        top: 50%;
+    }
+}
+.catalog-modal {
+    position: fixed;
+    width: 90%;
+    max-width: 900px;
+    min-height: 200px;
+    max-height: 95vh;
+    overflow: auto;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: var(--bg-general-theme-color);
+    z-index: 99999999;
+    border-radius: 10px;
+    animation: show-modal 0.4s ease forwards;
     &-inner {
         width: 100%;
-        min-height: 400px;
+        min-height: 200px;
         @include column-justify-start;
         position: relative;
-    
+
         .close-button {
             position: absolute;
             top: 5px;
@@ -21,24 +55,29 @@
             z-index: 2;
         }
     }
-    .color-swiper{
+
+    .color-swiper {
         margin-bottom: 20px;
         padding-bottom: 30px;
+
         .swiper-button-prev,
         .swiper-button-next {
             font-size: 20px;
         }
-        .color-slide{
+
+        .color-slide {
             width: 100%;
             @include row-center;
             display: flex !important;
             padding: 15px 0;
-            .color{
+
+            .color {
                 width: 80%;
                 max-width: 300px;
                 height: 200px;
             }
-            img{
+
+            img {
                 width: 80%;
                 max-width: 320px;
                 height: 200px;
@@ -46,7 +85,8 @@
             }
         }
     }
-    .catalog-name{
+
+    .catalog-name {
         width: 100%;
         padding: 15px;
         @include row-center;
@@ -56,17 +96,20 @@
         font-weight: 700;
         text-transform: capitalize;
     }
-    .catalog-modal-bottom{
+
+    .catalog-modal-bottom {
         width: 100%;
         padding: 20px;
         @include column-center;
-        .note{
+
+        .note {
             width: 100%;
             font-size: 12px;
             font-style: italic;
             margin-bottom: 15px;
         }
-        .submit-button{
+
+        .submit-button {
             width: 100%;
             padding: 15px;
             background-color: var(--color-1);
@@ -75,47 +118,56 @@
         }
 
     }
-    .color-checkbox-wrapper{
+
+    .color-checkbox-wrapper {
         width: 100%;
         display: grid;
         gap: 5px;
-        grid-template-columns: repeat(2,1fr);
+        grid-template-columns: repeat(2, 1fr);
         max-height: 150px;
         overflow: auto;
         margin-bottom: 15px;
-        .color-checkbox{
+
+        .color-checkbox {
             width: 100%;
             position: relative;
             @include column-justify-start;
-            .color{
+
+            .color {
                 width: 100%;
                 height: 100px;
                 padding: 5px;
                 border: 1px solid transparent;
                 margin-bottom: 5px;
                 @include row-center;
-                &.active{
+
+                &.active {
                     border-color: var(--color-1);
                 }
-                span{
+
+                span {
                     width: 100%;
                     height: 100%;
                     display: block
                 }
-                img{
+
+                img {
                     width: 100%;
                     height: 100%;
                     object-fit: contain
                 }
             }
-            .name{
+
+            .name {
                 @include column-center;
-                span{
+
+                span {
                     font-size: 13px;
                     font-weight: 600;
                 }
             }
-            input{
+
+            input {
                 position: absolute;
                 top: 0;
                 left: 0;
@@ -128,35 +180,38 @@
     }
 }
 
-
-@media only screen and (min-width: 576px){
-    .catalog-modal{
-        .color-checkbox-wrapper{
+@media only screen and (min-width: 576px) {
+    .catalog-modal {
+        .color-checkbox-wrapper {
             max-height: 250px;
             grid-template-columns: repeat(3, 1fr);
         }
     }
 }
-@media only screen and (min-width: 992px){
-    .catalog-modal{
-        .color-checkbox-wrapper{
+
+@media only screen and (min-width: 992px) {
+    .catalog-modal {
+        .color-checkbox-wrapper {
             grid-template-columns: repeat(4, 1fr);
-            .color-checkbox{
-                .color{
+
+            .color-checkbox {
+                .color {
                     height: 150px;
                 }
             }
         }
     }
 }
-@media only screen and (min-width: 1400px){
-    .catalog-modal{
-        form{
-            .note{
+
+@media only screen and (min-width: 1400px) {
+    .catalog-modal {
+        form {
+            .note {
                 font-size: 14px;
             }
         }
-        .color-checkbox-wrapper{
+
+        .color-checkbox-wrapper {
             max-height: 300px;
             grid-template-columns: repeat(5, 1fr);
         }
