--- a/src/scss/root.scss
+++ b/src/scss/root.scss
@@ -59,14 +59,14 @@
 
     --scrollbar-width: 7px;
     --scrollbar-height: 7px;
-    --scrollbar-radius: 10px;
+    --scrollbar-radius: 0;
     --scrollbar-thumb-color: var(--color-1);
     --scrollbar-track-color: #fff;
 
     --selection-bg: var(--color-1);
     --selection-color: #fff;
 
-    --section-padding: 40px 0;
-    --section-mb: 40px;
+    --section-padding: 30px 0;
+    --section-mb: 30px;
 
 }
