--- a/src/scss/basic.scss
+++ b/src/scss/basic.scss
@@ -145,3 +145,30 @@ section {
     width: 100%;
     padding: 10px 0;
 }
+
+
+.no-page-info{
+    width: 100%;
+    @include column-center;
+    color: var(--text-general-theme-color);
+    .numb{
+        font-size: 80px;
+        color: var(--color-1);
+        margin-bottom: 15px;
+        font-weight: 800;
+    }
+    .label{
+        font-size: 18px;
+        font-weight: 600;
+        margin-bottom: 20px;
+    }
+    a{
+        padding: 15px;
+        @include row-center;
+        background-color: var(--color-1);
+        color: var(--color-5);
+        border-radius: 10px;
+        min-width: 180px;
+        font-weight: 600;
+    }
+}
