--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -15,3 +15,5 @@
 @import '../components/product/scss/product-detail-row.scss';
 @import '../components/catalog/catalog.scss';
 @import '../components/basket/basket-table.scss';
+
+@import '../components/account/account.scss'
