--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -16,6 +16,7 @@
     --card-text-color: #212121;
     --modal-bg-color: #fff;
     --counter-theme-bg: #efefef;
+    --account-input-border-color: var(--black-3);
 
 
     background-color: var(--bg-general-theme-color);
@@ -39,6 +40,7 @@
         --card-text-color: #fff;
         --modal-bg-color: #000;
         --counter-theme-bg: var(--black-6);
+        --account-input-border-color: var(--white-2);
 
 
 
