--- a/src/components/header/scss/components/mobile-menu.scss
+++ b/src/components/header/scss/components/mobile-menu.scss
@@ -34,6 +34,7 @@
     left: -100%;
     width: 100%;
     max-width: 450px;
+    overflow: auto;
     min-height: 100vh;
     z-index: 200;
     opacity: 0;
@@ -113,7 +114,7 @@
     }
 
     .menu-footer {
-        position: fixed;
+        position: absolute;
         bottom: 0;
         width: 100%;
         @include row-between;
