--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -5,6 +5,7 @@
 @import 'swiper-slider.scss';
 @import 'animation.scss';
 @import 'general-components.scss';
+@import 'form.scss';
 
 
 @import '../components/toolbar/toolbar.scss';
@@ -16,4 +17,7 @@
 @import '../components/catalog/catalog.scss';
 @import '../components/basket/basket-table.scss';
 
-@import '../components/account/account.scss'
+@import '../components/account/account.scss';
+
+
+@import '../components/profile/profile.scss'
