--- a/src/scss/form.scss
+++ b/src/scss/form.scss
@@ -1,7 +1,7 @@
 .form-general {
     width: 100%;
     @include column-center;
-    padding: 15px;
+    padding: 15px 0;
     .inner{
         width: 100%;
         height: 100%;
@@ -10,7 +10,7 @@
 
     .form-floating {
         width: 100%;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
 
         label {
             background-color: transparent !important;
