compare page completed

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -20,4 +20,5 @@
 @import '../components/account/account.scss';
 
 
-@import '../components/profile/scss/profile.scss'
+@import '../components/profile/scss/profile.scss';
+@import '../components/compare/compare-section.scss'
