--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -17,6 +17,7 @@
     --modal-bg-color: #fff;
     --counter-theme-bg: #efefef;
     --input-border-color: var(--black-3);
+    --list-bg-color: #f9f9f9;
 
 
     background-color: var(--bg-general-theme-color);
@@ -41,6 +42,7 @@
         --modal-bg-color: #000;
         --counter-theme-bg: var(--black-6);
         --input-border-color: var(--white-2);
+        --list-bg-color: var(--black-7);
 
 
 
