banner slider completed

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -21,4 +21,5 @@
 
 
 @import '../components/profile/scss/profile.scss';
-@import '../components/compare/compare-section.scss'
+@import '../components/compare/compare-section.scss';
+@import '../components/home/scss/home.scss';
