--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -18,6 +18,7 @@
     --counter-theme-bg: #efefef;
     --input-border-color: var(--black-3);
     --list-bg-color: #f9f9f9;
+    --slider-dot-color: var(--black-3);
 
 
     background-color: var(--bg-general-theme-color);
@@ -43,6 +44,7 @@
         --counter-theme-bg: var(--black-6);
         --input-border-color: var(--white-2);
         --list-bg-color: var(--black-7);
+        --slider-dot-color: var(--black-9);
 
 
 
