--- a/src/scss/general-components.scss
+++ b/src/scss/general-components.scss
@@ -89,6 +89,7 @@
 }
 
 .section-title {
+    width: 100%;
     text-transform: capitalize;
     color: var(--text-general-theme-color);
     font-weight: 700;
