--- a/src/scss/swiper-slider.scss
+++ b/src/scss/swiper-slider.scss
@@ -13,6 +13,19 @@
     width: 100%;
     padding-bottom: 50px;
     overflow: hidden;
+    border: none;
+    outline: none;
+
+    .slick-slide{
+        outline: none !important;
+        &:focus{
+            outline: none !important;
+        }
+        div{
+            outline: none !important;
+        }
+    }
+    
 
     .slick-track {
         margin: 0;
@@ -38,7 +51,7 @@
                     width: 10px;
                     height: 10px;
                     opacity: 1;
-                    background-color: var(--color-2);
+                    background-color: var(--slider-dot-color);
                     color: transparent;
                     border-radius: 50%;
                 }
@@ -65,6 +78,7 @@
 
 .swiper {
     z-index: 1;
+
     .swiper-button-next,
     .swiper-button-prev {
         position: absolute;
