masters and contact page completed

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -23,3 +23,5 @@
 @import '../components/profile/scss/profile.scss';
 @import '../components/compare/compare-section.scss';
 @import '../components/home/scss/home.scss';
+@import '../components/contact/contact.scss';
+@import '../components/masters/masters.scss'
