--- a/src/scss/form.scss
+++ b/src/scss/form.scss
@@ -2,7 +2,8 @@
     width: 100%;
     @include column-center;
     padding: 15px 0;
-    .inner{
+
+    .inner {
         width: 100%;
         height: 100%;
         @include column-justify-start;
@@ -23,6 +24,7 @@
             }
         }
     }
+
     .form-control {
         border: 0;
         box-shadow: none;
@@ -35,58 +37,67 @@
             border-color: var(--color-1);
         }
     }
-    textarea.form-control{
+
+    textarea.form-control {
         resize: none;
         min-height: 200px;
         border: 1px solid var(--input-border-color);
     }
-    .form-check{
-        &-input{
+
+    .form-check {
+        &-input {
             box-shadow: none;
             border: 1px solid var(--color-1);
-            &:checked{
+
+            &:checked {
                 background-color: var(--color-1);
             }
         }
     }
-    .submit-button{
+
+    .submit-button {
         width: 100%;
         margin-top: 25px;
         padding: 15px;
         background-color: var(--color-1);
         color: var(--color-5);
         font-weight: 600;
-        &:hover{
+
+        &:hover {
             animation: pulse-red 1s ease infinite;
         }
     }
+
+    .restore-password {
+        width: 100%;
+        @include row-justify-start;
+        padding: 15px 0;
+        margin-bottom: 20px;
+
+        a {
+            font-size: 14px;
+            color: var(--color-1);
+            text-decoration: underline;
+
+            &:hover {
+                text-decoration: none;
+            }
+        }
+    }
+
     &.account {
         padding: 30px 15px;
         border: 1px solid var(--border-theme-color);
-        .col-12{
+
+        .col-12 {
             margin-bottom: 0;
-        }
-        .restore-password {
-            width: 100%;
-            @include row-justify-start;
-            padding: 15px 0;
-            margin-bottom: 20px;
-
-            a {
-                font-size: 14px;
-                color: var(--color-1);
-                text-decoration: underline;
-
-                &:hover {
-                    text-decoration: none;
-                }
-            }
         }
 
         .form-buttons {
             width: 100%;
             @include column-center;
             margin-top: 40px;
+
             button,
             a {
                 width: 100%;
@@ -112,66 +123,76 @@
             }
         }
     }
-    .order-info{
-     width: 100%;
-     height: 100%;
-     padding: 30px 15px;
-     border: 1px solid var(--border-theme-color);   
-     @include column-justify-start;
-     .title{
-        padding-bottom: 20px;
-        margin-bottom: 20px;
-        border-bottom: 1px solid var(--border-theme-color);
+
+    .order-info {
         width: 100%;
-        text-align: center;
-     }
-     .info-row{
-        width: 100%;
-        @include row-between;
-        color: var(--text-general-theme-color);
-        margin-bottom: 10px;
-        padding-bottom: 10px;
-        border-bottom: 1px solid var(--border-theme-color);
-        &.main{
-            color: var(--color-1);
+        height: 100%;
+        padding: 30px 15px;
+        border: 1px solid var(--border-theme-color);
+        @include column-justify-start;
+
+        .title {
+            padding-bottom: 20px;
+            margin-bottom: 20px;
+            border-bottom: 1px solid var(--border-theme-color);
+            width: 100%;
+            text-align: center;
         }
-        span{
-            font-weight: 700;
+
+        .info-row {
+            width: 100%;
+            @include row-between;
+            color: var(--text-general-theme-color);
+            margin-bottom: 10px;
+            padding-bottom: 10px;
+            border-bottom: 1px solid var(--border-theme-color);
+
+            &.main {
+                color: var(--color-1);
+            }
+
+            span {
+                font-weight: 700;
+            }
         }
-     }
     }
 }
 
 
-@media only screen and (min-width: 576px){
-    .form-general{
-        &.account{
-            .restore-password{
-                a{
+@media only screen and (min-width: 576px) {
+    .form-general {
+        &.account {
+            .restore-password {
+                a {
                     font-size: 16px;
                 }
             }
-            .form-buttons{
+
+            .form-buttons {
                 flex-direction: row;
                 justify-content: space-between;
-                button, a{
+
+                button,
+                a {
                     max-width: 200px;
                     margin: 0;
                 }
             }
         }
-        .order-info{
+
+        .order-info {
             padding: 30px 25px;
-            span{
+
+            span {
                 font-size: 18px;
             }
         }
     }
 }
 
-@media only screen and (min-width: 768px){
-    .form-general{
-        &.account{
+@media only screen and (min-width: 768px) {
+    .form-general {
+        &.account {
             padding: 40px 20px;
         }
     }
