--- a/src/components/header/scss/header.scss
+++ b/src/components/header/scss/header.scss
@@ -18,7 +18,7 @@ header {
 
         &.fixed-top {
             animation: fixed-nav 0.5s ease forwards;
-            box-shadow: 0 0 5px var(--box-shadow-theme-color)
+            box-shadow: 0 0 5px var(--box-shadow-theme-color);
         }
 
         .container {
